# genome

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml  test.py
genome/: binary_layers.pyx  binary_layers_numpy.py  demo.py  distributions.py  env_wrappers.py  environments.py  models.py  train.py
genome/binary_networks/: cpu.pyx  debug.py  inference.py
genome/binary_networks/gpu/: binary_network.cpp  binary_network.hpp  common.hpp  linear_layer.cu  linear_layer.cuh  python_interface.cpp  python_interface.pyx  sign_layer.cu  sign_layer.cuh
gpu/: Makefile  binary_network_wrapper.pxd  linear_layer.cu  python_interface.cpp  python_interface.pyx  setup.py  sign_layer.cu  test.cpp  test.py
notebooks/: Baselines.ipynb
